[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/waypoint_editor/waypoint_dock.gd" type="Script" id=1]

[node name="waypoint_dock" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="enable_button" type="Button" parent="."]
margin_left = 1.0
margin_top = 1.0
margin_right = 116.0
margin_bottom = 38.0
text = "Enable"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="disable_button" type="Button" parent="."]
margin_left = 2.0
margin_top = 59.0
margin_right = 116.0
margin_bottom = 95.0
text = "Disable"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="export_button" type="Button" parent="."]
margin_left = 2.0
margin_top = 160.5
margin_right = 116.0
margin_bottom = 196.5
text = "Export"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 1.0
margin_top = 107.0
margin_right = 119.0
margin_bottom = 151.0
text = "Disabled"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="enable_button" to="." method="_on_enable_button_pressed"]
[connection signal="pressed" from="disable_button" to="." method="_on_disable_button_pressed"]
[connection signal="pressed" from="export_button" to="." method="_on_export_button_pressed"]
